PROJECT(microdb)
CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
ADD_SUBDIRECTORY(libcommon)
AUX_SOURCE_DIRECTORY(. DIR_SRCS)
ADD_EXECUTABLE(microdb ${DIR_SRCS})
INCLUDE_DIRECTORIES(./include)
LINK_DIRECTORIES(/home/vagrant/projects/microdb-git/microdb/libcommon)
TARGET_LINK_LIBRARIES(microdb common)
SET(CMAKE_CXX_FLAGS "-std=c++11 -g -lpthread ${CMAKE_CXX_FLAGS}")
SET(CMAKE_C_COMPILER "/usr/bin/gcc")
SET(CMAKE_CXX_COMPILER "/usr/bin/g++")
